compiler/zrc_codegen/src/snapshots/zrc_codegen__expr__tests__cg_place__struct_property_access_in_place_position.snap
---
source: compiler/zrc_codegen/src/expr.rs
description: "struct S { x: i32, y: i32 }\n\nfn test() {\n    let x: S;\n\n    // TEST: the value must NOT be loaded! it must simply gep to obtain a pointer,\n    // then `store` into that pointer.\n    x.y = 4;\n\n    return;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define void @test() {
entry:
  %let_x = alloca { i32, i32 }, align 8
  %gep = getelementptr inbounds { i32, i32 }, ptr %let_x, i32 0, i32 1
  store i32 4, ptr %gep, align 4
  ret void
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "--fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")

